# context-research

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/benchmarks/: wp1_core.yaml  wp1_smoke.yaml
configs/experiments/: e0_smoke.yaml  e0_smoke_qwen3_4b.yaml  e1_aggregated_latency.yaml  e2_batch_concurrency.yaml  e3_disaggregated_vs_aggregated.yaml  e4_capability_subset.yaml  e5_memory_decomposition.yaml  e6_yarn_stress.yaml
configs/model/: qwen3_8b.yaml
configs/serving/: aggregated.yaml  aggregated_e6_yarn.yaml  disaggregated.yaml
docs/: Multiplexed-Memory-LLM-Research.md  lightning-a100-setup.md  research-project-plan.docx.md  wp1-implementation-roadmap.md  wp1-task-backlog.md
docs/research/: Context-Extension-Research.md  Retention-Research.md  Serving-Systems-Substrate-Research.md
docs/wp1/: wp1-concepts-and-tools.md  wp1-implementation-roadmap.md  wp1-progress-log.md  wp1-reflection.md  wp1-task-backlog.md
scripts/: bootstrap.sh  make_report.sh  run_experiment.sh
src/context_research/: cli.py
src/context_research/benchmarks/: __init__.py  base.py  harness.py  infinitybench.py  longbench.py  pg19.py  ruler_subset.py
src/context_research/config/: __init__.py  io.py  schema.py
src/context_research/experiments/: __init__.py  extended_runner.py  runner.py
src/context_research/profiling/: __init__.py  reporter.py
src/context_research/profiling/collectors/: __init__.py  base.py  gpu_stats.py  kv_transfer_stats.py  latency_stats.py
src/context_research/serving/: __init__.py
(+9 files in other folders)
